kubernetes/mindef-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mindef
  labels: 
    istio-injection: disabled
