kubernetes/authservice-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    mindef.service: authservice
  name: authservice-db
spec:
  replicas: 1
  selector:
    matchLabels:
      mindef.service: authservice
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        #mindef.network/authservice_network: "true"
        mindef.service: authservice
    spec:
      containers:
      - args:
        - --default-authentication-plugin=mysql_native_password
        image: mysql
        imagePullPolicy: "IfNotPresent"
        name: authservice-db
        ports:
        - containerPort: 3306
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: authservice-db-data
      hostname: authservice-db
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: authservice-db-data
        persistentVolumeClaim:
          claimName: authservice-db-data
status: {}
