kubernetes/authservice-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: authservice
  labels:
    mindef.service: authservice
spec:
  containers:
  - name: authservice
    image: sacation/mindef-authservice:latest
    ports:
      - containerPort: 80
      - containerPort: 5003
  - name: authservice-db
    image: mysql
    ports:
      - containerPort: 3306
    volumeMounts: 
      - mountPath: /var/lib/mysql
        name: authservice-db-data
    args:
      - --default-authentication-plugin=mysql_native_password
  volumes:
    - name: authservice-db-data
      persistentVolumeClaim:
        claimName: authservice-db-data
