kubernetes/authservice-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    mindef.service: authservice
  name: authservice
spec:
  ports:
  - name: "3306"
    port: 3306
    targetPort: 3306
  selector:
    mindef.service: authservice
status:
  loadBalancer: {}
