kubernetes/authservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    mindef.service: authservice
  name: authservice
spec:
  ports:
  - name: "5002"
    port: 5002
    targetPort: 80
  - name: "5003"
    port: 5003
    targetPort: 5003
  - name: "authservice-db"
    port: 3306
    targetPort: 3306
  selector:
    mindef.service: authservice
status:
  loadBalancer: {}
