kubernetes/mindef-ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mindef
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mindef-ingress
  namespace: mindef
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: mindefdashboard.nl
    http:
      paths:
      - path: / 
        pathType: Prefix
        backend:
          service:
            name: mindef-frontend
            port: 
              number: 3000
  - host: api.mindefdashboard.nl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mindef-gateway
            port: 
              number: 80
# development only
  - host: authservice.mindefdashboard.nl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: authservice
            port: 
              number: 80
